# nixos-config

./: .env.container  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BUILD_STATUS_SYSTEM.md  CLAUDE.md  FLAKE_REFACTOR_GUIDE.md  GEMINI.md  MIGRATION_PLAN.md  PROJECT-COMPLETE.md  PR_30_MERGE_STATUS.md  README.md  REFACTOR_SUMMARY.md  REMAINING_WORK.md  SCRATCHPAD_FIXES_SUMMARY.md  SCRATCHPAD_FIX_PLAN.md  SCRATCHPAD_MARK_ANALYSIS.md  STATUS-feature-090.md  SWAY_RESEARCH_SUMMARY.md  Trace-4e0831-2025-12-21 09_12_20.json  VM_SETUP.md  build-container-v2.sh  build-container.sh  check-input-usage.sh  coderabbit-worktree-README.md  codex-config.md  configuration-base.nix  configuration-hetzner-desktop.nix  configuration-hetzner.nix  configuration-m1-fallback.nix  configuration-m1-installer.nix  configuration-m1-minimal.nix  configuration-m1-ultra-minimal.nix  configuration-m1-working.nix  configuration-m1.nix  configuration-simple.nix  configuration-vm.nix  configuration.nix  configuration.nix.backup  (+56 more)
home-modules/desktop/i3-project-event-daemon/: .build-info  FEATURE_057_STATUS.md  INTEGRATION_GUIDE.md  README.md  __init__.py  __main__.py  action_executor.py  badge_service.py  config.py  config_schema.json  connection.py  constants.py  daemon.py  default-config.json  event_buffer.py  event_correlator.py  eww_publisher.py  floating_window_manager.py  handlers.py  handlers_feature057_patch.py  ipc_server.py  models.py  monitor_config_manager.py  monitor_profile_service.py  monitor_role_resolver.py  monitoring_panel_publisher.py  output_state_manager.py  pattern.py  pattern_resolver.py  proc_monitor.py  project_filter_service.py  pyproject.toml  repos_loader.py  rule_action.py  state.py  subprocess_utils.py  systemd_query.py  test_ipc_server_focus.py  test_ipc_server_launch.py  validate_feature_051.py  (+6 more)
home-modules/tools/: CHANGELOG.md  DOCSTRING_STYLE_GUIDE.md  app-launcher.nix  bat.nix  btop.nix  chromium-profiles.nix  chromium-pwas.nix  chromium-unified.nix  chromium.nix  clipboard.nix  clipcat.nix  cluster-management.nix  copilot-auth.nix  diffnav.nix  direnv.nix  disk-guardrails.nix  docker.nix  firefox-pwa-icons.nix  firefox-pwas-auto.nix  firefox-pwas-declarative.nix  firefox-pwas-declarative.nix.old  firefox-pwas-dynamic.nix  firefox-pwas-managed.nix  firefox-pwas-per-host.nix  firefox-pwas.nix  firefox.nix  firefox.nix.bak-extensions  fleet-kubeconfigs.nix  fzf-file-search.nix  fzf.nix  gh-aw.nix  gh-dash.nix  gh-enhance.nix  gh.nix  git-container-auth.nix  git-container.nix  git-gtr.nix  git.nix  gitkraken.nix  headlamp-plugins.nix  (+47 more)
home-modules/tools/app-launcher/: README.md  deno.json
home-modules/tools/cli-ux/: README.md  deno.json  mod.ts
home-modules/tools/ebpf_ai_monitor/: README.md  __init__.py  __main__.py  badge_writer.py  bpf_probes.py  daemon.py  models.py  notifier.py  otel_subscriber.py  process_tracker.py  pyproject.toml
home-modules/tools/i3-project-test/: __main__.py  models.py  test_runner.py  tmux_manager.py  validate_launch_context.sh
home-modules/tools/i3-window-rules-service/: __init__.py  __main__.py  cli.py  comparison.py  config_manager.py  discovery.py  i3-window-rules  i3_client.py  models.py
home-modules/tools/i3_project_manager/: __init__.py  __main__.py  pyproject.toml
home-modules/tools/i3_project_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
home-modules/tools/i3_project_monitor/: __init__.py  __main__.py  daemon_client.py  models.py
home-modules/tools/i3pm/: ARCHITECTURE.md  default.nix  deno.json  i3pm-monitors
home-modules/tools/i3pm-cli/: deno.json  main.ts
home-modules/tools/i3pm-deno/: README.md  deno.json  i3pm-monitors  main.ts  mod.ts  test_args.ts
home-modules/tools/i3pm-diagnostic/: __main__.py  default.nix
home-modules/tools/monitoring-panel/: __init__.py  app_crud_handler.py  app_form_validator_stream.py  cli_executor.py  conflict_detector.py  (+2 more)
(+4418 files in other folders)
