[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "i3-project-event-daemon"
version = "1.0.0"
description = "Event-driven project management daemon for i3 window manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "i3ipc>=2.2.1",
    "systemd-python>=235",
    "pydantic>=2.0.0",
]

[project.scripts]
i3-project-event-daemon = "i3_project_daemon.daemon:main"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
