[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebpf-ai-monitor"
version = "0.1.0"
description = "eBPF-based AI agent process monitor for NixOS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "vpittamp"}
]
keywords = ["ebpf", "bcc", "monitoring", "ai", "nixos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
ebpf-ai-monitor = "ebpf_ai_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ebpf_ai_monitor = ["py.typed"]
